--- a/index.html
+++ b/index.html
@@ -9,6 +9,123 @@
         .image-container { display: flex; justify-content: center; gap: 20px; margin-top: 20px; }
         img { width: 300px; height: auto; cursor: pointer; border: 3px solid transparent; }
         img:hover { border-color: blue; }
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test de Selección de Fotos</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        h2, h3 {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+
+        #nombre-form {
+            margin-top: 20px;
+        }
+
+        input {
+            padding: 10px;
+            margin: 10px;
+            width: 80%;
+            max-width: 300px;
+            font-size: 16px;
+            border: 2px solid #ccc;
+            border-radius: 5px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        /* Estilo para las imágenes */
+        .image-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+            flex-wrap: wrap; /* Permite que las imágenes se muevan a la siguiente fila en pantallas pequeñas */
+        }
+
+        img {
+            width: 100%;
+            max-width: 300px; /* Limita el tamaño de las imágenes */
+            height: auto;
+            cursor: pointer;
+            border: 3px solid transparent;
+            border-radius: 5px;
+            transition: border-color 0.3s ease;
+        }
+
+        img:hover {
+            border-color: blue;
+        }
+
+        /* Estilo para el mensaje de selección */
+        #mensaje {
+            font-size: 18px;
+            margin-top: 10px;
+        }
+
+        /* Estilos responsivos */
+        @media screen and (max-width: 768px) {
+            h2 {
+                font-size: 20px;
+            }
+
+            h3 {
+                font-size: 20px;
+            }
+
+            input {
+                width: 90%;
+            }
+
+            button {
+                width: 80%;
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            .image-container {
+                flex-direction: column; /* Muestra las imágenes en columna en pantallas muy pequeñas */
+                gap: 10px;
+            }
+
+            img {
+                max-width: 100%; /* Asegura que las imágenes ocupen todo el ancho en dispositivos muy pequeños */
+            }
+        }
+
+        /* Estilo para los resultados finales */
+        #resultado {
+            display: none;
+            margin-top: 20px;
+        }
+
+        #final-image {
+            width: 100%;
+            max-width: 300px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -29,16 +146,14 @@
             <img id="img2" onclick="selectImage(1)" />
         </div>
         <p id="mensaje"></p>
+        <button id="enviar-btn" style="display: none;" onclick="enviarFormulario()">Enviar</button>
     </div>
 
     <div id="resultado" style="display: none;">
         <h3>Tu imagen ganadora</h3>
-        <img id="final-image" width="300px" height="auto" />
+        <img id="final-image" />
         <p id="nombre-usuario"></p>
-        <button id="enviar-btn" onclick="enviarFormulario()">Enviar</button>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <script>
         let images = [
@@ -102,7 +217,7 @@
             // Mostrar el resultado y el botón para enviar el formulario
             document.getElementById('test').style.display = 'none';
             document.getElementById('resultado').style.display = 'block';
-            document.getElementById('enviar-btn').style.display = 'block';  // Aseguramos que el botón se haga visible
+            document.getElementById('enviar-btn').style.display = 'block';
         }
 
         // Función para enviar el formulario con el nombre y la imagen seleccionada
@@ -112,22 +227,30 @@
                 return;
             }
 
-            const data = {
+            const templateParams = {
                 nombre: nombrePersona,
                 imagen: ultimaImagenSeleccionada
             };
 
-            // Usamos Axios para enviar el formulario a Formspree
-            axios.post('https://formspree.io/f/mldjrqzr', data)
-                .then(function(response) {
-                    alert('¡Formulario enviado con éxito!');
-                })
-                .catch(function(error) {
-                    alert('Hubo un error al enviar el formulario. Por favor, intenta nuevamente.');
-                });
+            fetch('https://formspree.io/f/mldjrqzr', {
+                method: 'POST',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(templateParams),
+            })
+            .then(response => response.json())
+            .then(data => {
+                alert('¡Formulario enviado con éxito!');
+            })
+            .catch(error => {
+                alert('Hubo un error al enviar el formulario. Por favor, intenta nuevamente.');
+            });
         }
     </script>
 </body>
 </html>
+
 
 
