--- a/index.html
+++ b/index.html
@@ -5,17 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test de Selección de Fotos</title>
     <style>
-        body { text-align: center; font-family: Arial, sans-serif; }
-        .image-container { display: flex; justify-content: center; gap: 20px; margin-top: 20px; }
-        img { width: 300px; height: auto; cursor: pointer; border: 3px solid transparent; }
-        img:hover { border-color: blue; }
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test de Selección de Fotos</title>
-    <style>
         body {
             text-align: center;
             font-family: Arial, sans-serif;
@@ -126,6 +115,12 @@
             max-width: 300px;
             margin-bottom: 20px;
         }
+
+        /* Estilo para que el botón de "Enviar" siempre esté visible */
+        #enviar-btn {
+            display: none;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -146,13 +141,13 @@
             <img id="img2" onclick="selectImage(1)" />
         </div>
         <p id="mensaje"></p>
-        <button id="enviar-btn" style="display: none;" onclick="enviarFormulario()">Enviar</button>
     </div>
 
     <div id="resultado" style="display: none;">
         <h3>Tu imagen ganadora</h3>
         <img id="final-image" />
         <p id="nombre-usuario"></p>
+        <button id="enviar-btn" onclick="enviarFormulario()">Enviar</button>
     </div>
 
     <script>
@@ -251,6 +246,7 @@
     </script>
 </body>
 </html>
+
 
 
 
